removed .origin, added comments

--- a/src/vooga/rts/networking/resources/package.html
+++ b/src/vooga/rts/networking/resources/package.html
@@ -7,7 +7,9 @@
 This package is part of the CompSci 308 VOOGA Game Engine Project.
 
 <p>
-This package contains resources for networking.
+This package contains resources for networking. It includes english and portugese 
+resources files as well as a configuration.properties file used by the server
+for its configuration.
 
 <!-- Put @see and @since tags down here. -->
 
